# thinkshare-daemon

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.turn  README.md  api.go  cluster.example.yaml  daemon.go  daemon_linux.go  daemon_test.go  daemon_windows.go  devsim.go  docker-compose.yaml  go.mod  go.sum  hi_test.go  log_handler.go  main.go  secret  shm_linux.go  shm_windows.go  turn.json  virtdaemon_linux.go  virtdaemon_windows.go  webrtc.go
.github/workflows/: workers.yml
_volumes/: grafana.ini
api/: api.go
api/session/: filter_ice_server.go  signaling.go  ssinfor.go
child-process/: childproc.go
childprocess/: attr_linux.go  attr_windows.go  childproc.go
cluster/: cluster.go  cluster_test.go  impl.go  node.go  peer.go
cmd/: main.go
cmd/cli/: main.go
cmd/daemon/: daemon.go  main.go  service.go
cmd/service/: service.go
credential/: cred.go  supabase.go
credential/oauth2/: browser.go  oauth2l.go
display/: CMakeLists.txt  export.h  main.c  parsec.cpp  parsec.h
ice-servers/: filter_ice_server.go  ice_server_test.go
log/: log.go
persistent/: persistent.go
persistent/gRPC/: conductor.proto  gen.ps1  grpc_client.go
persistent/http/: http.go  http_test.go
persistent/websocket/: websocket.go
pipeline/: pipeline.go  pipeline_test.go
pipeline/device/: tools.go
pocketbase/: pocketbase.go  pocketbase_test.go
pocketbase/custom/: customization.go
scripts/: buildAll.ps1  download.build.ps1  download.etc.ps1  download.ps1  download.runtime.ps1  install-service.bat  uninstall-service.bat  update.ps1
service/: CMakeLists.txt  daemon.go  hid.go  hub.go  service.go  thinkremote-svc.cpp
service/cmd/: main.go  main_test.go
service/linux/: service.sh  setup.go
service/turn/: main.go
service/window/: service.go
session/: ssinfor.go
session/ice/: filter_ice_server.go  ice_server_test.go
session/signaling/: signaling.go
system/: sysinf.go
tools/: CMakeLists.txt  thinkremote-svc.cpp
update/: update.go
utils/: array.go  path.go
utils/app/: app.go
utils/array/: array_test.go
utils/backup/: backup.go  backup__test.go
utils/discord/: discord.go  disord_test.go
utils/frp/: frp.go  frp_test.go
utils/libvirt/: daemon.go  example.go  libvirt.go  libvirt_network.go  libvirt_test.go  model.go  network.go  ovs_network.go  (+2 more)
(+39 files in other folders)
